Fix alignment issue Local Storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,10 @@
     left: 55px;
     text-shadow: 2px 2px 8px black;
 }
+
+.recent-searches{
+    display: flex;
+    flex-direction: column;
+    
+}
+
